# Coada-distribuita-de-mesaje

./: DEMO_VIDEO.md  Dockerfile  PLAN DE LUCRU.md  README.md  cerinte.md  control.bat  docker-compose.yml  pyproject.toml  start.bat  stop.bat  wal_node1.jsonl  wal_node_test.jsonl
scripts/: demo_live.py  demo_local.ps1  demo_menu.py
src/dmq/: __init__.py  cli.py  commands.py  node.py  protocol.py  store.py  wal.py
tests/: test_integration.py  test_node.py  test_protocol.py  test_store.py
